# simcc_trojan

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  installer.nsi
src/: constants.rs  macros.rs  main.rs  storage.rs  web.rs
src/websockets/: handlers.rs  mod.rs
src/websockets/payloads/: client.rs  general.rs  mod.rs  server.rs
