[package]
name = "simcc_trojan"
version = "0.1.0"
edition = "2024"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[tasks.win-build]
command = "cargo"
args = ["build", "--target", "x86_64-pc-windows-gnu"]

[tasks.win-run]
dependencies = ["win-build"]
command = "wine"
args = ["target/x86_64-pc-windows-gnu/debug/${CARGO_MAKE_PROJECT_NAME}.exe"]

[dependencies]
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
